Fixed sugggestion layout problem with masonry

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -156,13 +156,6 @@ p
 .lastfm--visible
   transform: translateY(-200px)
 
-.alert__container
-  display: flex
-  align-items: center
-  justify-content: center
-  flex-direction: column
-  height: 100%
-
 .form
   display: flex
   flex-direction: column
@@ -345,7 +338,6 @@ p
 .results__list
   overflow: hidden
   margin: 0 auto
-  padding-top: 100px
 
 .result
   color: #fff
@@ -608,6 +600,7 @@ p
   content: 'hipcharts.com/u/'
   display: block
   position: absolute
+  z-index: 40
   font-size: 16px
   color: #999
   bottom: 10px
@@ -621,13 +614,15 @@ p
   display: block
 
 .register__input
+  position: relative
+  z-index: 20
   height: 40px
   border: 0
   border-radius: 3px
-  background-color: #646464
+  background-color: #fff
   border: 1px solid rgb(46, 46, 46)
   transition: border-color 0.1s ease
-  color: #fff
+  color: #333
   padding: 0 10px
   font-size: 16px
   width: 100%
@@ -657,6 +652,34 @@ p
 
 .register__action--error
   border-color: red
+
+.register__check
+  opacity: 0
+  position: absolute
+  width: 40px
+  height: 40px
+  background: #111
+  color: orange
+  right: 0
+  bottom: 0
+  display: flex
+  align-items: center
+  justify-content: center
+  border: 1px solid #444
+  border-left: 0
+  border-radius: 0 2px 2px 0
+  transition: all 0.2s ease
+  z-index: 5
+  
+.register__check--error
+  opacity: 1
+  transform: translateX(40px)
+  &:before
+    content: "\f057"
+    font-family: 'FontAwesome'
+
+.register__check--error + .register__input
+  border-color: #222
 
 .landing__title
   font-size: 28px
@@ -966,6 +989,9 @@ p
   .module--spaced
     padding-top: 73px
     padding-bottom: 40px
+
+  .module--blocked
+    display: block
 
   .sidebar
     height: 100%
